--- a/TechTracker/templates/TechTracker/table.html
+++ b/TechTracker/templates/TechTracker/table.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" crossorigin="anonymous">
-    <link rel="">
+    <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}">
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -58,47 +58,32 @@
 
 <div style="padding:20px;width:100%;height:100%;">
     <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
-    <div id="id_relation_chart" style="width: 100%;height:800px;">
-    </div>
+    <table id="example" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th>姓名</th>
+                <th>第一作者</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for key, value in first_dict.items %}
+            <tr>
+            <td>{{ key }}</td>
+            <td>{{ value }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+
+    </table>
 </div>
 </body>
 </html>
 <script src="{% static 'jquery/jquery-3.5.1.js' %}"></script>
-<script src="{% static 'echarts/echarts.js' %}" type="text/javascript" charset="utf-8"></script>
-<script src="{% static 'echarts/extension/dataTool.js' %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static 'DataTables/datatables.js' %}" type="text/javascript" charset="utf-8"></script>
 <script>
-    var myChart = echarts.init(document.getElementById('id_relation_chart'));
-    option = {
-        xAxis: {
-            type: 'category',
-            axisLabel: {
-                // interval: 0,
-                rotate: 40,
-
-            },
-            data: {{ authors | safe }}
-        },
-        yAxis: {
-            type: 'value',
-            minInterval: 1,
-            boundaryGap: [0, "0.2"],
-
-        },
-        grid: {
-                left: '10%',
-                bottom: '35%'
-            },
-        series: [{
-            data: {{ amounts }},
-            type: 'bar',
-            showBackground: true,
-            backgroundStyle: {
-                color: 'rgba(220, 220, 220, 0.8)'
-            }
-        }]
-    };
-
-    myChart.setOption(option);
+    $(document).ready( function () {
+    $('#example').DataTable();
+} );
 
 </script>
 
