--- a/TechTracker/templates/TechTracker/table.html
+++ b/TechTracker/templates/TechTracker/table.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'DataTables/datatables.css' %}">
+    <link rel="stylesheet" href="{% static 'DataTables/css/jquery.dataTables.css' %}">
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -60,18 +60,18 @@
     <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
     <table id="example" class="display" style="width:100%">
         <thead>
-            <tr>
-                <th>姓名</th>
-                <th>第一作者</th>
-            </tr>
+{#        <tr>#}
+{#            <th>姓名</th>#}
+{#            <th>第一作者</th>#}
+{#        </tr>#}
         </thead>
         <tbody>
-        {% for key, value in first_dict.items %}
-            <tr>
-            <td>{{ key }}</td>
-            <td>{{ value }}</td>
-            </tr>
-        {% endfor %}
+        {#        {% for key, value in first_dict.items %}#}
+        {#            <tr>#}
+        {#            <td>{{ key }}</td>#}
+        {#            <td>{{ value }}</td>#}
+        {#            </tr>#}
+        {#        {% endfor %}#}
         </tbody>
 
     </table>
@@ -81,9 +81,28 @@
 <script src="{% static 'jquery/jquery-3.5.1.js' %}"></script>
 <script src="{% static 'DataTables/datatables.js' %}" type="text/javascript" charset="utf-8"></script>
 <script>
-    $(document).ready( function () {
-    $('#example').DataTable();
-} );
+    $(document).ready(function () {
+        var data = {{ data|safe }}
+            $('#example').DataTable({
+                data: data,
+                "columns": [{"data": "name", title: "dafaf"}, {"data": "value", title: "adfafasf"}, {"data": "", title:'<input type="checkbox" id="checkAll">'}],
+                "aLengthMenu": [10, 20, 30, 40],
+                "iDisplayLength": 10,
+                "aoColumnDefs": [{
+                    "sClass": "text-center",
+                    "targets": -1
+                }, {
+                    "bSortable": false,
+                    "aTargets": -1
+                }, {
+                    "render": function (data, type) {
+                        return "<div align='center'><input type='checkbox' name='ckb-jobid' value=''" + data + "></div>";
+                    },
+                    "aTargets": -1 //最后一列
+                },
+                ],
+            });
+    });
 
 </script>
 
