--- a/TechTracker/templates/TechTracker/index.html
+++ b/TechTracker/templates/TechTracker/index.html
@@ -96,20 +96,19 @@
                             </ul>
                         </li>
                         <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link"
-                                                                              href="index.html"
-                                                                              data-toggle="dropdown"><span
+                                                                              href="{% url 'ConfigCo' %}"><span
                                 data-i18n="Dashboard">共现分析</span></a>
-                            <ul class="dropdown-menu">
-                                <li data-menu=""><a class="dropdown-item align-items-center"
-                                                    href="dashboard-ecommerce.html"
-                                                    data-toggle="dropdown"><i class="bx bx-right-arrow-alt"></i>文献数据导入</a>
-                                </li>
-                                <li class="active" data-menu=""><a class="dropdown-item align-items-center"
-                                                                   href="dashboard-analytics.html"
-                                                                   data-toggle="dropdown"><i
-                                        class="bx bx-right-arrow-alt"></i>网络数据导入</a>
-                                </li>
-                            </ul>
+{#                            <ul class="dropdown-menu">#}
+{#                                <li data-menu=""><a class="dropdown-item align-items-center"#}
+{#                                                    href="dashboard-ecommerce.html"#}
+{#                                                    data-toggle="dropdown"><i class="bx bx-right-arrow-alt"></i>文献数据导入</a>#}
+{#                                </li>#}
+{#                                <li class="active" data-menu=""><a class="dropdown-item align-items-center"#}
+{#                                                                   href="dashboard-analytics.html"#}
+{#                                                                   data-toggle="dropdown"><i#}
+{#                                        class="bx bx-right-arrow-alt"></i>网络数据导入</a>#}
+{#                                </li>#}
+{#                            </ul>#}
                         </li>
                     </ul>
                 </div>
